Buttons working well

--- a/buttonStyles.css
+++ b/buttonStyles.css
@@ -6,7 +6,8 @@
     border: none;
     cursor: pointer;
 }
-.dropbtnLane1 {
+
+.dropbtnLane {
     background-color: #4CAF50;
     color: white;
     padding: 16px;
@@ -14,46 +15,7 @@
     border: none;
     cursor: pointer;
 }
-.dropbtnLane2 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-.dropbtnLane3 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-.dropbtnLane4 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-.dropbtnLane5 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-.dropbtnLane6 {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+
 .redBib {
     background-color: red;
     color: white;
